style sheet test no.2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="type/css"/>
 </head>
 <body>
-    <div class="Header">
+    <div class="header">
         <header>
             <div>
                 <h2>Header Logo</h2>
@@ -35,7 +35,7 @@
             <img>
         </div>
     </div>
-    <div class="Body">
+    <div class="body">
         <div>
             <p>Some random information.</p>
         </div>
