Adding to style.css and correct html where necessary. Still to be completed.

--- a/index.html
+++ b/index.html
@@ -4,30 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="type/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="header">
-        <header>
-            <div>
-                <h2>Header Logo</h2>
-            </div>
-            <div>
-                <div>
-                    <p>header link one</p>
-                </div>
-                <div>
-                    <p>header link two</p>
-                </div>
-                <div>
-                    <p>header link two</p>
-                </div>
-            </div>
-        </header>
-    </div>
+    <header>
+        <div id="logo">
+            <h2>Header Logo</h2>
+        </div>
+        <div id="links">
+            <a href="">Header link one</a>
+            <a href="">Header link two</a>
+            <a href="">Header link two</a>
+        </div>
+    </header>
     <div>
         <div>
-            <header>This Website is awesome</header>
+            <h2 class="title">This Website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contract.</p>
             <button>Sign Up</button>
         </div>
