Slowly adding more to CSS and adjusting html to suit.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="">Header link two</a>
         </div>
     </header>
-    <div>
-        <div>
+    <div class="welcome">
+        <div class="welcome-body">
             <h2 class="title">This Website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contract.</p>
+            <p class="intro">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contract.</p>
             <button>Sign Up</button>
         </div>
         <div>
