--- a/index.html
+++ b/index.html
@@ -28,34 +28,32 @@
         </div>
     </div>
     <div class="body">
-        <div>
+        <div class="infotitle">
             <p>Some random information.</p>
         </div>
-        <div>
+        <div class="infobx">
             <div>
-                <div></div>
+                <img>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div>
-                <div></div>
+                <img>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div>
-                <div></div>
+                <img>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div>
-                <div></div>
+                <img>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
-    <div>
-        <div>
+    <div class="quote">
+        <div class="quotebx">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filled up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        </div>
-        <div>
-            <p>-Thor, God of Thunder</p>
+            <b>-Thor, God of Thunder</b>
         </div>
     </div>
     <div>
