Final product. All complete and functional.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <b>-Thor, God of Thunder</b>
         </div>
     </div>
-    <div>
-        <div>
+    <div class="action">
+        <div class="actionbx">
             <div>
-                <p>Call to action! It's time!</p>
+                <h2>Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that button right over there</p>
             </div>
             <div>
@@ -67,6 +67,10 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="footer">
+        <p>Copyright &copy; ScottEbr</p>
+    </div>
+   
 </body>
 </html>
